--- a/.gitmodules
+++ b/.gitmodules
@@ -9,3 +9,6 @@
 	path = lib/openzeppelin-contracts
 	url = https://github.com/Openzeppelin/openzeppelin-contracts
 	branch = v4.8.1
+[submodule "lib/colormap-registry"]
+	path = lib/colormap-registry
+	url = https://github.com/fiveoutofnine/colormap-registry
